fixed invisible button

--- a/index.css
+++ b/index.css
@@ -1,19 +1,39 @@
 /*HERO SECTION*/
+
+.img{
+  border: #2ec4b6 2px;
+  width: 1220;
+
+}
+
 body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
   align-items: center;
   padding: 20px;
-  width: 1220px;
-  height: 550px;
-  background-color: black;
+  background-color: black;s
+  border-radius: 5px;
+  background-image: url(pic-modified.png);
+  background-size: cover;
   color:antiquewhite;
 }
 h1{
   color:#EB5E28;
+  font-size: 80px;
+  text-align: center;
+}
+
+h4{
+  font-size: 30px;
 }
 .hero{
   border-radius: 5px;
   padding: 20px;
-  border: 2px #2ec4b6 solid;
+}
+
+.hero{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 #hero{
@@ -21,7 +41,7 @@ h1{
   flex-direction: row;
   align-items: center;
   justify-content:space-around;
-  padding: 20px;
+  padding: 10px;
   border-radius: 5px;
   width: 500px;
   background:antiquewhite;
@@ -40,9 +60,9 @@ h1{
   height: 45px;
   width: 100px;
   border-radius: 5px;
-  border: 2px solid #EB5E28;
+  border: 4px solid #EB5E28;
   cursor: pointer;
-  background-color: transparent;
+  background-color: antiquewhite;
   transition: 0.5s;
   text-transform: uppercase;
   font-size: 12px;
@@ -51,10 +71,9 @@ h1{
 
   .me a{
     text-decoration: none!important;
-    color:#EB5E28;
+    color:black;
   }
   .me:hover{
     background-color: #EB5E28;
-    color: #252422;
     border: #EB5E28;
   }
